--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
     <script defer src="./script.js"></script>
     <title>Clima da Cidade</title>
   </head>
