adicionando temperatura maxima e minima

--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
             <p><span class="velocidade-vento"></span>Km/h</p>
           </div>
         </div>
+        <div class="detalhes-temp">
+          <div class="info">
+            <span class="title-temp">TEMP MAX</span>
+            <p class="temperatura-max"><span></span>&deg;C</p>
+          </div>
+          <div class="info">
+            <span class="title-temp">TEMP MIN</span>
+            <p class="temperatura-min"><span></span>&deg;C</p>
+          </div>
+        </div>
       </div>
       <div id="loader" class="hide">
         <i class="fa-solid fa-spinner"></i>
