--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         </div>
         <div class="detalhes-temp">
           <div class="info">
-            <span class="title-temp">TEMP. MAX</span>
+            <span class="title-temp">TEMP MAX</span>
             <p class="temperatura-max"><span></span>&deg;C</p>
           </div>
           <div class="info">
-            <span class="title-temp">TEMP. MIN</span>
+            <span class="title-temp">TEMP MIN</span>
             <p class="temperatura-min"><span></span>&deg;C</p>
           </div>
         </div>
